--- a/Data_Wrangling_with_mongoDB_openStreetMap.ipynb
+++ b/Data_Wrangling_with_mongoDB_openStreetMap.ipynb
@@ -238,7 +238,7 @@
    "metadata": {},
    "source": [
     "# 2. Problems Encountered in the Map\n",
-    "After initially downloading a small sample size of the San Jose area and running it, I noticed three main problems with the data, which I will discuss in the following order:  \n",
+    "After initially downloading a small sample size of the San Jose area and running it, I noticed two main problems with the data, which I will discuss in the following order:  \n",
     "1) Abbreviated street names ('Branham Ln')  \n",
     "2) Inconsistent postal codes ('CA950543', '95014-1899')"
    ]
