--- a/Data_Wrangling_with_mongoDB_openStreetMap.ipynb
+++ b/Data_Wrangling_with_mongoDB_openStreetMap.ipynb
@@ -89,7 +89,7 @@
     "# Load data\n",
     "# This data just a sample for code testing\n",
     "# Please read html file if you want to reviewed entire analysis.\n",
-    "data = 'data/sample.osm'"
+    "data = 'data/sanjose.osm'"
    ]
   },
   {
@@ -111,13 +111,13 @@
      "data": {
       "text/plain": [
        "{'bounds': 1,\n",
-       " 'member': 115,\n",
-       " 'nd': 21564,\n",
-       " 'node': 13332,\n",
+       " 'member': 14382,\n",
+       " 'nd': 1508760,\n",
+       " 'node': 1291540,\n",
        " 'osm': 1,\n",
-       " 'relation': 21,\n",
-       " 'tag': 7128,\n",
-       " 'way': 3721}"
+       " 'relation': 1363,\n",
+       " 'tag': 693140,\n",
+       " 'way': 171911}"
       ]
      },
      "execution_count": 4,
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "{'lower': 6751, 'lower_colon': 363, 'other': 14, 'problemchars': 0}"
+       "{'lower': 378290, 'lower_colon': 291114, 'other': 23736, 'problemchars': 0}"
       ]
      },
      "execution_count": 5,
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "94 peoples invovlved in the map editing.\n"
+      "1265 peoples invovlved in the map editing.\n"
      ]
     }
    ],
@@ -240,7 +240,8 @@
     "# 2. Problems Encountered in the Map\n",
     "After initially downloading a small sample size of the San Jose area and running it, I noticed two main problems with the data, which I will discuss in the following order:  \n",
     "1) Abbreviated street names ('Branham Ln')  \n",
-    "2) Inconsistent postal codes ('CA950543', '95014-1899')"
+    "2) Inconsistent postal codes ('CA950543', '95014-1899')  \n",
+    "3) We use two scripts (street.py & zipcode.py) in this section."
    ]
   },
   {
@@ -270,7 +271,7 @@
     "### Zip Codes\n",
     "Postal code strings posed a different sort of problem, forcing a decision to strip all leading and trailing characters before and after the main 5-digit zip code. This effectually dropped all leading state characters (as in 'CA950543') and 4-digit zip code extensions following a hyphen ('95014-1899'). This 5-digit constriction benefits MongoDB aggregation calls on postal codes.  \n",
     "1) Although most of the zip code is correct, there're still a lot of zip code with incorrect 5 digit formats. We will process it like update street name.  \n",
-    "2 )The output of the clean zip code is summarised below. There are the format of 5 digits or string 'None'."
+    "2 )The output of the clean zip code are the format of 5 digits or string 'None'."
    ]
   },
   {
@@ -279,6 +280,10 @@
    "source": [
     "# 3. Data Overview\n",
     "This section contains basic statistics about the dataset and the MongoDB queries used to gather them.  \n",
+    "We from street import is_street_name, update_street, mapping_street, mapping_abbrev to cleaning street name  \n",
+    "We from zipcode import is_zipcode, update_zipcode to cleaning zipcode  \n",
+    "we use shape_elemnt function to wrangle data and parse it.  \n",
+    "We use process_map to write json and output to mongoDB. \n",
     "  \n",
     "### Preparing for MongoDB by converting XML to JSON\n",
     "In order to transform the data from XML to JSON, we need to follow these rules:  \n",
@@ -321,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The original OSM file is 3.329866 MB\n"
+      "The original OSM file is 286.056458 MB\n"
      ]
     }
    ],
@@ -340,7 +345,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The JSON file is 3.795992 MB\n"
+      "The JSON file is 327.883245 MB\n"
      ]
     }
    ],
@@ -359,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of documents is 17053\n"
+      "The number of documents is 1463451\n"
      ]
     }
    ],
@@ -380,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of node is 13332\n"
+      "The number of node is 1291532\n"
      ]
     }
    ],
@@ -400,7 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of way is 3721\n"
+      "The number of way is 171880\n"
      ]
     }
    ],
@@ -420,7 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of unique users is 91\n"
+      "The number of unique users is 1257\n"
      ]
     }
    ],
@@ -441,7 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The first contributor is TELCOM IP with 4921 contributions.\n"
+      "The first contributor is nmixter with 288570 contributions.\n"
      ]
     }
    ],
@@ -465,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is 22 users appearing only once.\n"
+      "There is 272 users appearing only once.\n"
      ]
     }
    ],
@@ -489,10 +494,10 @@
     "# 4. Additional Ideas\n",
     "### Contributor statistics and suggestion\n",
     "According to these results below, we found unbelievable truth.  \n",
-    "1) Best contributor gave 28% documents, greater than 1/4 of total contributions.  \n",
-    "2) Three contributors also over half of total contributions, it means top 2 and top 3 contributors are far behind top 1 contributors.  \n",
-    "3) Just 20 contributors already gave 96% of total documents, it means rest of people almost have not any contributors in here even if still have 24% contributors gave one post.  \n",
-    "4) Eeery contributor shall gave 187 documents by average contribution, but most of people can't close to this number.  \n",
+    "1) Best contributor gave 19% documents, almost 1/5 of total contributions.  \n",
+    "2) Four contributors also over 40% total contributions, it means top 2, top 3 and top 4 contributors are far behind top 1 contributors.  \n",
+    "3) Just 100 contributors already gave 95% of total documents, it means rest of people almost have not any contributors in here even if still have 21% contributors gave one post.  \n",
+    "4) Every contributor shall gave 1164 documents by average contribution, but most of people can't close to this number.  \n",
     "5) What incentives should we increase? Perhaps we can refer to the experience of waze, which is a great application for navigation app. We can be divided different levels according to contribution, each level users will enjoy different privileges, badges and rewards."
    ]
   },
@@ -540,7 +545,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top1 Contributor is [u'TELCOM IP'], contribution percentage is 28%.\n"
+      "Top1 Contributor is [u'nmixter'], contribution percentage is 19%.\n"
      ]
     }
    ],
@@ -560,13 +565,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These contributors: [u'TELCOM IP', u'negro', u'Diego Sanguinetti'] have 55% contribution rate in this area.\n"
+      "These contributors: [u'nmixter', u'mk408', u'Bike Mapper', u'samely'] have 41% contribution rate in this area.\n"
      ]
     }
    ],
    "source": [
-    "top3,top3_percent_contrib=topn_contrib(3,user=True)\n",
-    "print 'These contributors: ' + str(top3) + ' have ' + str(top3_percent_contrib) + '% contribution rate in this area.'"
+    "top4,top4_percent_contrib=topn_contrib(4,user=True)\n",
+    "print 'These contributors: ' + str(top4) + ' have ' + str(top4_percent_contrib) + '% contribution rate in this area.'"
    ]
   },
   {
@@ -580,13 +585,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Contribution percentage from top 20 users is 96%.\n"
+      "Contribution percentage from top 100 users is 95%.\n"
      ]
     }
    ],
    "source": [
-    "top20,top20_percent_contrib=topn_contrib(20, user=True)\n",
-    "print 'Contribution percentage from top 20 users is ' + str(top20_percent_contrib) + '%.'"
+    "top100,top100_percent_contrib=topn_contrib(100, user=True)\n",
+    "print 'Contribution percentage from top 100 users is ' + str(top100_percent_contrib) + '%.'"
    ]
   },
   {
@@ -600,7 +605,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24% of users contribute with one post.\n"
+      "21% of users contribute with one post.\n"
      ]
     }
    ],
@@ -620,7 +625,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average number of documents per contributor is 187\n"
+      "Average number of documents per contributor is 1164\n"
      ]
     }
    ],
@@ -634,11 +639,11 @@
    "metadata": {},
    "source": [
     "### Additional data exploration using MongoDB queries\n",
-    "1) 17053 people living in this area.  \n",
-    "2) We found most amenities are bus stations, gas stations (fuel) and schools in this area. Let's explorating them.  \n",
-    "3) I am a bit suprised for this result, there has many long distance bus station in this small area. I though there has many caltrain or city bus stations.  \n",
-    "4) It looks like Grifo has most gas stations in this area, no much suprised for this result, but I can't belive only 1 Vista and have not some popular gas station like Shell in here.  \n",
-    "5) Pescador is the most popular restaurant in this area, they have 2 restaurant in here. After google it, I found this is a fish restaurant and keep a lower rate 3 in 5 stars. Interesting, they don't have delicious food for residents?"
+    "1) 1463451 people living in this area.  \n",
+    "2) We found most amenities are Parking and restaurant, it make sence for a Metropolitan area.  \n",
+    "3) I am not suprise to many city bus stations in this Metropolitan area.  \n",
+    "4) Shell, 76, Valeroand Chevron have most gas stations in this area, no much suprised for this result, They are every where in Bay Area.  \n",
+    "5) Pizza My Heart is the most popular restaurant in this area, they have 9 restaurants in here. I have been there before, their pizza really taste good, but I still have a bit suprise to this result, I though Thaifood is most popular food in San Jose.  "
    ]
   },
   {
@@ -652,7 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{u'count': 17053, u'_id': u'population'}]\n"
+      "[{u'count': 1463451, u'_id': u'population'}]\n"
      ]
     }
    ],
@@ -661,92 +666,6 @@
     "                    {'$sort':{'count':-1}}, {'$limit':10}])\n",
     "\n",
     "print list(population)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{u'count': 22, u'_id': u'bus_station'}\n",
-      "{u'count': 12, u'_id': u'fuel'}\n",
-      "{u'count': 12, u'_id': u'school'}\n",
-      "{u'count': 7, u'_id': u'restaurant'}\n",
-      "{u'count': 5, u'_id': u'hospital'}\n",
-      "{u'count': 5, u'_id': u'place_of_worship'}\n",
-      "{u'count': 4, u'_id': u'townhall'}\n",
-      "{u'count': 4, u'_id': u'marketplace'}\n",
-      "{u'count': 4, u'_id': u'university'}\n",
-      "{u'count': 4, u'_id': u'veterinary'}\n",
-      "{u'count': 3, u'_id': u'fire_station'}\n",
-      "{u'count': 2, u'_id': u'bank'}\n",
-      "{u'count': 2, u'_id': u'bar'}\n",
-      "{u'count': 2, u'_id': u'cafe'}\n",
-      "{u'count': 1, u'_id': u'doctors'}\n",
-      "{u'count': 1, u'_id': u'police'}\n",
-      "{u'count': 1, u'_id': u'community_centre'}\n",
-      "{u'count': 1, u'_id': u'post_office'}\n",
-      "{u'count': 1, u'_id': u'clinic'}\n",
-      "{u'count': 1, u'_id': u'public_building'}\n",
-      "{u'count': 1, u'_id': u'parking'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Let's check the number of amenity first\n",
-    "amenity = db.doc.aggregate([{'$match':{'amenity':{'$exists':1}}},\n",
-    "                               {'$group':{'_id':'$amenity', 'count':{'$sum':1}}},\n",
-    "                               {'$sort':{'count':-1}}])\n",
-    "for doc in amenity:\n",
-    "    print doc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{u'count': 2, u'_id': None}\n",
-      "{u'count': 2, u'_id': u'Emtrafesac'}\n",
-      "{u'count': 1, u'_id': u'Ku\\xe9lap'}\n",
-      "{u'count': 1, u'_id': u'exclusiva'}\n",
-      "{u'count': 1, u'_id': u'Emtrafesa'}\n",
-      "{u'count': 1, u'_id': u'cruz del sur'}\n",
-      "{u'count': 1, u'_id': u'Transportes Chiclayo'}\n",
-      "{u'count': 1, u'_id': u'IttsaBus'}\n",
-      "{u'count': 1, u'_id': u'Tepsa'}\n",
-      "{u'count': 1, u'_id': u'americas express'}\n",
-      "{u'count': 1, u'_id': u'Terminal Flores Hermanos'}\n",
-      "{u'count': 1, u'_id': u'Transportes Linea'}\n",
-      "{u'count': 1, u'_id': u'Oltursa'}\n",
-      "{u'count': 1, u'_id': u'Collectivos'}\n",
-      "{u'count': 1, u'_id': u'Transportes Acunta'}\n",
-      "{u'count': 1, u'_id': u'El Cumbe'}\n",
-      "{u'count': 1, u'_id': u'Burga Express'}\n",
-      "{u'count': 1, u'_id': u'Terminal Nort - Terminal North'}\n",
-      "{u'count': 1, u'_id': u'Transportes JEANBUCA'}\n",
-      "{u'count': 1, u'_id': u'Movil Tours'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "bus_station = db.doc.aggregate([{'$match':{'amenity':{'$exists':1}, 'amenity':'bus_station'}},\n",
-    "                               {'$group':{'_id':'$name', 'count':{'$sum':1}}},\n",
-    "                               {'$sort':{'count':-1}}])\n",
-    "for doc in bus_station:\n",
-    "    print doc"
    ]
   },
   {
@@ -760,25 +679,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{u'count': 2, u'_id': None}\n",
-      "{u'count': 2, u'_id': u'Primax'}\n",
-      "{u'count': 1, u'_id': u'Vista Alegre'}\n",
-      "{u'count': 1, u'_id': u'Pecsa'}\n",
-      "{u'count': 1, u'_id': u'Pesca'}\n",
-      "{u'count': 1, u'_id': u'Grifo San Antonio'}\n",
-      "{u'count': 1, u'_id': u'Grifos Gran Prix'}\n",
-      "{u'count': 1, u'_id': u'Grifo Le\\xf3n de Oro'}\n",
-      "{u'count': 1, u'_id': u'Repsol'}\n",
-      "{u'count': 1, u'_id': u'Terminal EPSEL'}\n"
+      "{u'count': 1835, u'_id': u'parking'}\n",
+      "{u'count': 937, u'_id': u'restaurant'}\n",
+      "{u'count': 532, u'_id': u'school'}\n",
+      "{u'count': 477, u'_id': u'fast_food'}\n",
+      "{u'count': 343, u'_id': u'place_of_worship'}\n",
+      "{u'count': 238, u'_id': u'cafe'}\n",
+      "{u'count': 233, u'_id': u'fuel'}\n",
+      "{u'count': 201, u'_id': u'bench'}\n",
+      "{u'count': 183, u'_id': u'toilets'}\n",
+      "{u'count': 182, u'_id': u'bicycle_parking'}\n"
      ]
     }
    ],
    "source": [
-    "gas_station = db.doc.aggregate([{'$match':{'amenity':{'$exists':1}, 'amenity':'fuel'}},\n",
-    "                    {'$group':{'_id':'$name', 'count':{'$sum':1}}},\n",
-    "                    {'$sort':{'count':-1}}])\n",
-    "\n",
-    "for doc in gas_station:\n",
+    "# Let's check the number of amenity first\n",
+    "amenity = db.doc.aggregate([{'$match':{'amenity':{'$exists':1}}},\n",
+    "                               {'$group':{'_id':'$amenity', 'count':{'$sum':1}}},\n",
+    "                               {'$sort':{'count':-1}}, {'$limit':10}])\n",
+    "for doc in amenity:\n",
     "    print doc"
    ]
   },
@@ -793,12 +712,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{u'count': 2, u'_id': u'El Paladar'}\n",
-      "{u'count': 1, u'_id': u'Mi Tia'}\n",
-      "{u'count': 1, u'_id': u'D Chota'}\n",
-      "{u'count': 1, u'_id': u'GIZA'}\n",
-      "{u'count': 1, u'_id': u'Hebron'}\n",
-      "{u'count': 1, u'_id': u'El Pescador'}\n"
+      "{u'count': 2, u'_id': None}\n",
+      "{u'count': 1, u'_id': u'San Jose Diridon Transit Center'}\n",
+      "{u'count': 1, u'_id': u'Valley Fair'}\n",
+      "{u'count': 1, u'_id': u'VTA Route 22'}\n",
+      "{u'count': 1, u'_id': u'VTA Route 55 Stop#62327'}\n",
+      "{u'count': 1, u'_id': u'Santa Clara Transit Center'}\n",
+      "{u'count': 1, u'_id': u'VTA Route 55 Stop#62391'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "bus_station = db.doc.aggregate([{'$match':{'amenity':{'$exists':1}, 'amenity':'bus_station'}},\n",
+    "                               {'$group':{'_id':'$name', 'count':{'$sum':1}}},\n",
+    "                               {'$sort':{'count':-1}}, {'$limit':10}])\n",
+    "for doc in bus_station:\n",
+    "    print doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'count': 71, u'_id': None}\n",
+      "{u'count': 25, u'_id': u'Shell'}\n",
+      "{u'count': 23, u'_id': u'76'}\n",
+      "{u'count': 22, u'_id': u'Valero'}\n",
+      "{u'count': 20, u'_id': u'Chevron'}\n",
+      "{u'count': 14, u'_id': u'Arco'}\n",
+      "{u'count': 5, u'_id': u'Rotten Robbie'}\n",
+      "{u'count': 2, u'_id': u'Spartan'}\n",
+      "{u'count': 2, u'_id': u'Beacon'}\n",
+      "{u'count': 2, u'_id': u'Cal Gas'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "gas_station = db.doc.aggregate([{'$match':{'amenity':{'$exists':1}, 'amenity':'fuel'}},\n",
+    "                    {'$group':{'_id':'$name', 'count':{'$sum':1}}},\n",
+    "                    {'$sort':{'count':-1}}, {'$limit':10}])\n",
+    "\n",
+    "for doc in gas_station:\n",
+    "    print doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'count': 20, u'_id': None}\n",
+      "{u'count': 9, u'_id': u'Pizza My Heart'}\n",
+      "{u'count': 7, u'_id': u\"Denny's\"}\n",
+      "{u'count': 6, u'_id': u'Panera Bread'}\n",
+      "{u'count': 6, u'_id': u'Round Table Pizza'}\n",
+      "{u'count': 6, u'_id': u'Round Table'}\n",
+      "{u'count': 5, u'_id': u'Subway'}\n",
+      "{u'count': 5, u'_id': u'IHOP'}\n",
+      "{u'count': 4, u'_id': u'Outback Steakhouse'}\n",
+      "{u'count': 4, u'_id': u'Pizza Hut'}\n"
      ]
     }
    ],
